changed impl of message formatting