@@ -40,7 +40,7 @@ public class ReportingTelegramBot extends TelegramLongPollingBot {
             User user = telegramUserService.verifyContact(update.getMessage());
             if (user == null) {
                 sendBotMessageService.sendMessage(TelegramUtils.currentChatId(update), "Кажеться твой номер не добавили в список разрешенных. Свяжись с тем кто может добавить твой номер в White list!");
-                throw new TelegramUserException(String.format("This user is not registered yet! Phone = +%s. ChatId = %s.", update.getMessage().getContact().getPhoneNumber(), TelegramUtils.currentChatId(update)));
+                throw new TelegramUserException("This user is not registered yet! Phone = +%s. ChatId = %s.".formatted(update.getMessage().getContact().getPhoneNumber(), TelegramUtils.currentChatId(update)));
             }
             dialogRouterService.startFlow(user.getChatId().toString());
             return;
